--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,3 +18,7 @@ spring:
           default-label: main
           search-paths:
           - '{application}'
+
+# Should be env property
+encrypt:
+  key: MySuperSecretKey
