adding sec creds for Eureka - closes #6

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,3 +25,7 @@ spring:
 # Should be env property
 encrypt:
   key: MySuperSecretKey
+eureka:
+  client:
+    service-url:
+      defaultZone: http://netflix:eureka@localhost:8761/eureka
