--- a/pom.xml
+++ b/pom.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xmlns="http://maven.apache.org/POM/4.0.0"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.4.4</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath /> <!-- lookup parent from repository -->
     </parent>
     <groupId>io.github.fykidwai</groupId>
     <artifactId>mssc-config-server</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <name>mssc-config-server</name>
     <description>Example JMS project</description>
     <properties>
@@ -185,7 +183,7 @@
         <url>https://github.com/fykidwai/mssc-config-server</url>
         <connection>scm:git:https://github.com/fykidwai/mssc-config-server</connection>
         <developerConnection>scm:git:https://fykidwai@github.com/fykidwai/mssc-config-server</developerConnection>
-        <tag>HEAD</tag>
+        <tag>mssc-config-server-0.0.1</tag>
     </scm>
     <issueManagement>
         <url>https://github.com/fykidwai/mssc-config-server/issues</url>
