--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <groupId>io.github.fykidwai</groupId>
     <artifactId>mssc-config-server</artifactId>
-    <version>0.0.2-SNAPSHOT</version>
+    <version>0.0.2</version>
     <name>mssc-config-server</name>
     <description>Example JMS project</description>
     <properties>
@@ -183,7 +183,7 @@
         <url>https://github.com/fykidwai/mssc-config-server</url>
         <connection>scm:git:https://github.com/fykidwai/mssc-config-server</connection>
         <developerConnection>scm:git:https://fykidwai@github.com/fykidwai/mssc-config-server</developerConnection>
-        <tag>HEAD</tag>
+        <tag>mssc-config-server-0.0.2</tag>
     </scm>
     <issueManagement>
         <url>https://github.com/fykidwai/mssc-config-server/issues</url>
